# flags

./: .emoji  Cargo.toml  README.md  easy_cluster.sh
src/: app.rs  args.rs  browser.rs  config.rs  crdts.rs  gossip.rs  listener.rs  log.rs  main.rs  mdns.rs  node.rs  register.rs  service.rs  shutdown.rs  whisperer.rs
src/crdts/: last_write_wins.rs
src/gossip/: listener.rs  whisperer.rs
src/init/: args.rs  container.rs
src/mdns/: browser.rs
src/shutdown/: container.rs  manager.rs
