[package]
name = "crdt-dist-obj"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
eyre = "0.6.12"
mdns-sd = "0.13.8"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }
